; ModuleID = '/home/carl/AnghaBench/linux/net/netfilter/extr_xt_mark.c_mark_tg.c'
source_filename = "/home/carl/AnghaBench/linux/net/netfilter/extr_xt_mark.c_mark_tg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sk_buff = type { i32 }
%struct.xt_action_param = type { %struct.xt_mark_tginfo2* }
%struct.xt_mark_tginfo2 = type { i32, i32 }

@XT_CONTINUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sk_buff*, %struct.xt_action_param*)* @mark_tg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mark_tg(%struct.sk_buff* %0, %struct.xt_action_param* %1) #0 {
  %3 = alloca %struct.sk_buff*, align 8
  %4 = alloca %struct.xt_action_param*, align 8
  %5 = alloca %struct.xt_mark_tginfo2*, align 8
  store %struct.sk_buff* %0, %struct.sk_buff** %3, align 8
  store %struct.xt_action_param* %1, %struct.xt_action_param** %4, align 8
  %6 = load %struct.xt_action_param*, %struct.xt_action_param** %4, align 8
  %7 = getelementptr inbounds %struct.xt_action_param, %struct.xt_action_param* %6, i32 0, i32 0
  %8 = load %struct.xt_mark_tginfo2*, %struct.xt_mark_tginfo2** %7, align 8
  store %struct.xt_mark_tginfo2* %8, %struct.xt_mark_tginfo2** %5, align 8
  %9 = load %struct.sk_buff*, %struct.sk_buff** %3, align 8
  %10 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.xt_mark_tginfo2*, %struct.xt_mark_tginfo2** %5, align 8
  %13 = getelementptr inbounds %struct.xt_mark_tginfo2, %struct.xt_mark_tginfo2* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = xor i32 %14, -1
  %16 = and i32 %11, %15
  %17 = load %struct.xt_mark_tginfo2*, %struct.xt_mark_tginfo2** %5, align 8
  %18 = getelementptr inbounds %struct.xt_mark_tginfo2, %struct.xt_mark_tginfo2* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = xor i32 %16, %19
  %21 = load %struct.sk_buff*, %struct.sk_buff** %3, align 8
  %22 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %21, i32 0, i32 0
  store i32 %20, i32* %22, align 4
  %23 = load i32, i32* @XT_CONTINUE, align 4
  ret i32 %23
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
